--- a/public-html/css/common.css
+++ b/public-html/css/common.css
@@ -73,7 +73,7 @@ a:hover {
     border-bottom: solid 1px #004098;
 }
 
-#code {
-  width: 100%;
-  height: 300px;
+.CodeMirror {
+  width: 100% !important;
+  height: 300px !important;
 }
