--- a/spang-api/app/views/layouts/_search_template.html.haml
+++ b/spang-api/app/views/layouts/_search_template.html.haml
@@ -1,4 +1,4 @@
-
-= form_tag(library_search_template_path,:method => 'get') do
-  = text_field_tag :search
-  = submit_tag 'Search Template', :name => nil
+.searchbox
+  = form_tag(library_search_template_path,:method => 'get') do
+    = text_field_tag :search, "", placeholder: "Search Templates..."
+    = submit_tag 'Search', :name => nil
