--- a/spang-api/app/views/layouts/application.html.haml
+++ b/spang-api/app/views/layouts/application.html.haml
@@ -11,5 +11,8 @@
     = yield :header
   %body
     -#%script#common-header-and-footer__script{:src => "https://dbcls.rois.ac.jp/DBCLS-common-header-footer/common-header-and-footer/script/common-header-and-footer.js", :style => "display: block", :type => "text/javascript"}
-    = render partial: 'layouts/search_template'
-    = yield
+
+    .content_wrapper_wide
+      = yield :path
+      = render partial: 'layouts/search_template'
+      = yield
