--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = yield :header
   %body
-    -#%script#common-header-and-footer__script{:src => "https://dbcls.rois.ac.jp/DBCLS-common-header-footer/common-header-and-footer/script/common-header-and-footer.js", :style => "display: block", :type => "text/javascript"}
+    %script#common-header-and-footer__script{:src => "https://dbcls.rois.ac.jp/DBCLS-common-header-footer/v2/script/common-header-and-footer.js", :style => "display: block", :type => "text/javascript"}
 
     .content_wrapper_wide
       = yield :path
