--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = favicon_link_tag 'favicon.ico'
     = yield :header
   %body
     %script#common-header-and-footer__script{:src => "https://dbcls.rois.ac.jp/DBCLS-common-header-footer/v2/script/common-header-and-footer.js", :style => "display: block", :type => "text/javascript"}
